--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <meta content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"
+        name="viewport">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link href="@/assets/css/index.css" rel="stylesheet">
     <title>cms-car</title>
 </head>
 
