--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
         name="viewport">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>cms-car</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=lDoXpLpu2XbmGMldPWdVzC12zvsBFb9K">
+    </script>
 </head>
 
 <body>
